--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     .error {
         color: red;
     }
+
+body {
+	 font-family: 'Roboto', sans-serif;
+	 font-weight: 400;
+	 margin-left: 50px;
+	 scroll-behavior: smooth
+	}
   </style>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega@5"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm//vega-lite@4.8.1"></script>
