--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 	<p><code>TripRequest.itineraries.legs</code> is an array containing the individual segments of a single itinerary. </p>
 
 	<h2>Trip requests over time</h2>
-	<p>The chart below shows 1 million sample requests over 10 days. The bimodal distribution of requests 
+	<p>The chart below shows 1 million sample requests over one week. The bimodal distribution of requests 
 	during the morning and evening commute is apparent. The grey line represents the average for selected data. </p>
   <div id="vis"></div>
   
